--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="all">Show all</string>
+    <string name="one_minute">1 minute</string>
     <string name="twelve_hours">12 hours</string>
     <string name="one_hour">1 hour</string>
     <string name="menu_filter">Filter</string>
