add Navigation component, navigate between log and settings screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="one_hour">1 hour</string>
     <string name="menu_filter">Filter</string>
     <string name="menu_clear">Clear history</string>
+    <string name="menu_settings">Settings</string>
     <string name="tile_spotlog">Log track</string>
 </resources>
