--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,17 @@
     <string name="pref_foreground_title">Foreground service</string>
     <string name="pref_foreground_summary_on">Foreground service is running</string>
     <string name="pref_foreground_summary_off">Foreground service is off</string>
+
+    <!-- Dialog -->
+    <string name="dialog_broadcast_title">Enable Device Broadcast Status</string>
+    <string name="dialog_broadcast_message">SpotLog needs \'Device Broadcast Status\' enabled in
+        Spotify to work. Go to Spotify settings and enable it.</string>
+    <string name="dialog_broadcast_positive">Open Spotify</string>
+    <string name="dialog_broadcast_negative">Cancel</string>
+    <string name="dialog_package_title">Spotify not installed</string>
+    <string name="dialog_package_message">Spotify is required for this app to work.</string>
+    <string name="dialog_package_negative">Exit</string>
+
+
+
 </resources>
