Add play button to open Spotify and play song. Deeplink to Spotify settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="menu_filter_all">Show all</string>
     <string name="menu_settings">Settings</string>
     <string name="tile_spotlog">Log song</string>
+    <string name="btn_play">Play button</string>
 
     <!-- Notification -->
     <string name="notif_channel_name">Foreground service logger</string>
