--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="menu_settings">Settings</string>
     <string name="tile_spotlog">Log song</string>
     <string name="btn_play">Play button</string>
+    <string name="no_history">No history!</string>
 
     <!-- Notification -->
     <string name="notif_channel_name">Foreground service logger</string>
@@ -20,9 +21,9 @@
 
     <!-- Preferences -->
     <string name="pref_foreground_key">foreground_key</string>
-    <string name="pref_foreground_title">Foreground service</string>
-    <string name="pref_foreground_summary_on">Foreground service is running</string>
-    <string name="pref_foreground_summary_off">Foreground service is off</string>
+    <string name="pref_foreground_title">Log songs in background</string>
+    <string name="pref_foreground_summary_on">Background service is running</string>
+    <string name="pref_foreground_summary_off">Background service is off</string>
     <string name="pref_log_size_key">log_size_key</string>
     <string name="pref_log_size_title">Max songs in log</string>
     <string name="pref_log_size_summary">Select the maximum amount of songs to be logged at a time. Old songs will be deleted</string>
