--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,13 @@
     <string name="menu_filter_twelve_hours">12 hours</string>
     <string name="menu_filter_all">Show all</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_export">Share data</string>
     <string name="tile_spotlog">Log song</string>
     <string name="btn_play">Play button</string>
     <string name="no_history">No history!</string>
+
+    <string name="share_title">SpotLog data</string>
+    <string name="share_title_full">Share SpotLog data</string>
 
     <!-- Notification -->
     <string name="notif_channel_name">Foreground service logger</string>
